--- a/AgentFront/src/app/save-api/save-api.component.html
+++ b/AgentFront/src/app/save-api/save-api.component.html
@@ -12,7 +12,7 @@
              
           <br>
           <br>
-          <button mat-raised-button color="primary">Create</button>
+          <button mat-raised-button color="primary">Save</button>
         </form>
       </mat-card-content>
     </mat-card>
