--- a/AgentFront/src/app/user-page/user-page.component.scss
+++ b/AgentFront/src/app/user-page/user-page.component.scss
@@ -34,3 +34,7 @@
     background-color: #ddd;
     color: black;
   }
+  td {
+    border: 1px solid rgb(215, 215, 215);
+    border-collapse: collapse;
+  }
