--- a/AgentFront/src/app/login/login.component.html
+++ b/AgentFront/src/app/login/login.component.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
+
+<div class="topnav">
+  <a href="/login">Login</a>
+  <a href="/register">Register</a>
+</div>
+
 <span class="strong" *ngIf="infoMessage.length > 0">{{ infoMessage }}</span>
 <span class="strong" *ngIf="errorMessage" >
   {{errorMessage | json}}
