--- a/AgentFront/src/app/reactions/reactions.component.html
+++ b/AgentFront/src/app/reactions/reactions.component.html
@@ -1,4 +1,12 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
+<div class="topnav">
+  <a href="/userPage">Home</a>
+  <a href="/createBusiness">Create Business</a>
+  <a href="/home">Log out</a>
 
+</div>
 <body>
     <div class="page">
       <h1>Reactions:</h1>
