--- a/AgentFront/src/app/unactivated-businesses/unactivated-businesses.component.html
+++ b/AgentFront/src/app/unactivated-businesses/unactivated-businesses.component.html
@@ -1,4 +1,12 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
 
+<div class="topnav">
+  <a href="/unactivatedBusinesses">Home</a>
+  <a href="/home">Log out</a>
+
+</div>
 <body>
     <div class="page">
       <mat-table mat-table [dataSource]="data">
