--- a/AgentFront/src/app/user-page/user-page.component.html
+++ b/AgentFront/src/app/user-page/user-page.component.html
@@ -1,9 +1,11 @@
 <body>
-    <div class="header">
-      </div>
-      
+  <div class="header">
+    <h1>Agent</h1>
+  </div>
       <div class="topnav">
+        <a href="/userPage">Home</a>
         <a href="/createBusiness">Create Business</a>
+        <a href="/home">Log out</a>
 
       </div>
     <h1>Job offers:</h1>
