--- a/AgentFront/src/app/create-job-offer/create-job-offer.component.html
+++ b/AgentFront/src/app/create-job-offer/create-job-offer.component.html
@@ -1,4 +1,16 @@
-<div class="page"> 
+
+   <div class="header">
+    <h1>Agent</h1>
+  </div>
+  
+  <div class="topnav">
+    <a href="/ownerPage">Home</a>
+    <a href="/updateBusiness">Update Business</a>
+    <a href="/createJob">Create a Job offer</a>
+    <a href="/saveApi">Input Api Key</a>
+    <a href="/home">Log out</a>
+  </div>
+  <div class="page"> 
     <mat-card>
       <mat-card-content>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
@@ -26,7 +38,10 @@
             <mat-error>
               Please provide a valid precondition
             </mat-error>
-          </mat-form-field>           
+          </mat-form-field>     
+          <section class="example-section">
+            <mat-checkbox class="example-margin" formControlName="clicked">Share on dislinkt!</mat-checkbox>
+          </section>      
           <br>
           <br>
           <button mat-raised-button color="primary">Create</button>
