--- a/AgentFront/src/app/post-reaction/post-reaction.component.html
+++ b/AgentFront/src/app/post-reaction/post-reaction.component.html
@@ -1,3 +1,12 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
+<div class="topnav">
+  <a href="/userPage">Home</a>
+  <a href="/createBusiness">Create Business</a>
+  <a href="/home">Log out</a>
+
+</div>
 <div class="page"> 
     <mat-card>
       <mat-card-content>
