--- a/AgentFront/src/app/register/register.component.html
+++ b/AgentFront/src/app/register/register.component.html
@@ -1,3 +1,13 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
+
+<div class="topnav">
+  <a href="/login">Login</a>
+  <a href="/register">Register</a>
+</div>
+<br>
+<br>
 <div class="page"> 
     <mat-card>
       <mat-card-content>
