--- a/AgentFront/src/app/save-api/save-api.component.html
+++ b/AgentFront/src/app/save-api/save-api.component.html
@@ -1,3 +1,14 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
+
+<div class="topnav">
+  <a href="/ownerPage">Home</a>
+  <a href="/updateBusiness">Update Business</a>
+  <a href="/createJob">Create a Job offer</a>
+  <a href="/saveApi">Input Api Key</a>
+  <a href="/home">Log out</a>
+</div>
 <div class="page"> 
     <mat-card>
       <mat-card-content>
