--- a/AgentFront/src/app/update-businesses/update-businesses.component.html
+++ b/AgentFront/src/app/update-businesses/update-businesses.component.html
@@ -1,5 +1,15 @@
+<div class="header">
+  <h1>Agent</h1>
+</div>
+
+<div class="topnav">
+  <a href="/ownerPage">Home</a>
+  <a href="/updateBusiness">Update Business</a>
+  <a href="/createJob">Create a Job offer</a>
+  <a href="/saveApi">Input Api Key</a>
+  <a href="/home">Log out</a>
+</div>
 <div class="page">
-  
     <mat-card>
       <mat-card-content>
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
