--- a/AgentFront/src/app/unactivated-businesses/unactivated-businesses.component.scss
+++ b/AgentFront/src/app/unactivated-businesses/unactivated-businesses.component.scss
@@ -55,3 +55,7 @@
     background-color: #ddd;
     color: black;
   }
+  td {
+    border: 1px solid rgb(215, 215, 215);
+    border-collapse: collapse;
+  }
